# jeb2239.github.io

./: Gemfile  _config.yml  archive.html  archives.html  authors.html  categories.html  conf.py  first-post.html  index.html  index.md  my-first-page.html  my-first-page.md  pyproject.toml  rss.xml  sitemap.xml  sitemapindex.xml  tags.html
.github/workflows/: github-actions-demo.yml
2021/: index.html
_posts/: 2018-04-29-welcome-to-jekyll.markdown
assets/css/: all-nocdn.css  all.css
author/: jonathan-barrios.html
blog/: Leetcode-Problem-1909.html  Leetcode-Problem-1909.md  epi-97.html  index.html  my-notebook.html  my-notebook.ipynb  this-is-my-new-site.html
categories/: cat_test.html  cat_test.xml  index.html  problems.html  problems.xml
category/: posts.html  review.html
content/: main.md
content/pages/: about.md
feeds/: all.atom.xml  posts.atom.xml  review.atom.xml
pages/: about.html  index.html  index.md  my-first-page.html  my-new-page.html  my-new-page.txt
posts/: epi-97.ipynb  leetcode-1909.md  this-is-my-new-site.md
