[tool.poetry]
name = "nikola-site"
version = "0.1.0"
description = ""
authors = ["Jonathan Barrios <jonathanbarrios81@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"ruamel.yaml" = "^0.16.12"
nikola = "^8.1.1"
jinja2 = "^2.11.2"
aiohttp = "^3.7.4"
watchdog = "^2.1.3"
notebook = "^6.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
