[project]
name = "nikola-site"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathan Barrios",email = "jonathanbarrios81@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nikola[extras] (>=8.3.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
